Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # - The codebase has to stay open source, whether it was modified or not
 # - You can not repackage or sell the codebase
 # - Acquire a commercial license to remove these terms by emailing: license@cal.com
-NEXT_PUBLIC_LICENSE_CONSENT=
+NEXT_PUBLIC_LICENSE_CONSENT='agree'
 LICENSE=
 
 # BASE_URL and NEXT_PUBLIC_APP_URL are both deprecated. Both are replaced with one variable, NEXT_PUBLIC_WEBAPP_URL
